# oss-nml

./: .dockerignore  .env.example  .gitignore  AI_TICKET_SERVICE.md  COMPONENTS.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  README.md  example_multi_backend.py  integrate.py  main.py  mkdocs.yml  openapi_ai_ticket_config.yaml  openapi_ai_ticket_service.json  pyproject.toml  run_server.sh  start_ai_service.sh  test.py
.circleci/: config.yml
deploy/: .env.example  DockerFIle  Dockerfile  README.md  docker-compose.yml  prometheus.yml
docs/: component.md  index.md  observability.md  testing.md
docs/ai/: ai_adapter.md  ai_api.md  ai_service.md  ai_service_client.md  openai_impl.md  overview.md
docs/ai_ticket/: api.md  overview.md
docs/api/: ai_client_adapter.md  ai_client_api.md  ai_client_service.md  openai_client_impl.md
docs/chat/: discord.md
docs/mail/: overview.md
docs/tickets/: backends.md
src/ai_adapter/: README.md  pyproject.toml
src/ai_adapter/src/ai_adapter/: __init__.py  client_impl.py
src/ai_adapter/src/ai_adapter/tests/: __init__.py  test_adapter.py
src/ai_adapter/tests/: test_client.py
src/ai_api/: README.md
src/ai_api/src/ai_api/: __init__.py
src/ai_api/tests/: test_ai_api.py
src/ai_client_adapter/: README.md  pyproject.toml
src/ai_client_adapter/src/ai_client_adapter/: __init__.py  client_impl.py
src/ai_client_adapter/tests/: __init__.py  test_adapter.py
src/ai_client_api/: README.md  pyproject.toml
src/ai_client_api/src/ai_client_api/: __init__.py  client.py  models.py
src/ai_client_service/: README.md  pyproject.toml
src/ai_client_service/src/ai_client_service/: __init__.py  dependencies.py  main.py  models.py
src/ai_client_service/tests/: __init__.py  conftest.py  test_service.py
src/ai_client_service_client/: README.md  pyproject.toml
src/ai_client_service_client/ai_client_service_client/: __init__.py
src/ai_client_service_client/ai_client_service_client/api/default/: create_chat_completion_chat_completions_post.py  create_chat_completion_stream_chat_completions_stream_post.py  health_check_health_get.py  oauth_authorize_oauth_authorize_get.py  oauth_callback_oauth_callback_post.py
src/ai_client_service_client/ai_client_service_client/models/: __init__.py  chat_completion_request.py  chat_completion_response.py  chat_completion_response_usage.py  chat_message.py  health_check_response.py  o_auth_callback_request.py  o_auth_callback_response.py
src/ai_service/: README.md  pyproject.toml
src/ai_service/src/ai_service/: main.py  models.py
src/ai_service/src/ai_service/tests/: __init__.py  test_api.py
src/ai_service/tests/: test_service.py
src/ai_service_client/: pyproject.toml
src/ai_service_client/ai_service_client/api/default/: generate_generate_post.py  (+1 more)
src/ai_service_client/ai_service_client/models/: __init__.py  generate_request.py  generate_request_response_schema_type_0.py  generate_response.py  generate_response_result_type_1.py  health_check_response.py
src/ai_ticket_adapter/: pyproject.toml
src/ai_ticket_adapter/src/ai_ticket_adapter/: __init__.py  client_impl.py
src/ai_ticket_adapter/tests/: test_adapter.py
src/ai_ticket_service/: README.md  pyproject.toml
src/ai_ticket_service/src/ai_ticket_service/: __init__.py  main.py  models.py  tickets_api_compat.py
src/ai_ticket_service/tests/: test_service.py  test_tickets_api_compat.py
src/ai_ticket_service_client/: README.md  pyproject.toml
src/ai_ticket_service_client/ai_ticket_service_client/: __init__.py
src/ai_ticket_service_client/ai_ticket_service_client/api/default/: command_command_post.py  health_health_get.py
src/ai_ticket_service_client/ai_ticket_service_client/models/: __init__.py  command_request.py  command_response.py  command_response_ai_result_type_0.py  command_response_ticket_result_type_0.py  command_response_ticket_result_type_1_item.py  health_check_response.py
src/discord_client_impl/src/discord_client_impl/: auth_helper.py  discord_impl.py
src/discord_client_impl/tests/: test_discord_client.py  test_discord_impl_additional.py
src/mail_client_adapter/: README.md  pyproject.toml
src/mail_client_adapter/src/mail_client_adapter/: __init__.py  client_impl.py
src/mail_client_service/: README.md  pyproject.toml
src/mail_client_service/src/mail_client_service/: __init__.py  dependencies.py  main.py  models.py
src/mail_client_service/tests/: __init__.py  test_client_impl.py  test_service.py
src/mail_client_service_client/: README.md  pyproject.toml
src/mail_client_service_client/mail_client_service_client/models/: __init__.py  message_detail.py  message_summary.py  operation_response.py
src/openai_client_impl/: README.md  pyproject.toml
src/openai_client_impl/src/openai_client_impl/: __init__.py  auth.py  database.py  openai_impl.py
src/openai_client_impl/tests/: test_openai_impl.py
src/openai_impl/: README.md  pyproject.toml
src/openai_impl/src/openai_impl/: __init__.py  openai_impl.py
src/openai_impl/tests/: __init__.py  conftest.py  test_openai_client.py  test_openai_impl.py
src/slack_api/: pyproject.toml
src/slack_impl/: pyproject.toml
src/tickets_api/: README.md  pyproject.toml
src/tickets_api/src/: __init__.py
src/tickets_api/src/tickets_api/: __init__.py
src/tickets_api/src/tickets_api/src/: __init__.py
src/tickets_client_impl/: README.md  main.py  pyproject.toml
src/tickets_client_impl/src/tickets_client_impl/: __init__.py  ticket_impl.py  tickets_impl.py
src/tickets_client_impl/tests/: __init__.py  test_status_mapping.py  test_ticket_impl.py  test_tickets_impl.py
src/trello_tickets_adapter/: README.md  pyproject.toml
src/trello_tickets_adapter/src/trello_tickets_adapter/: __init__.py  direct_trello_impl.py  ticket_impl.py  trello_tickets_impl.py
terraform/: main.tf
test-results/unit/: junit.xml
tests/e2e/: test_ai_e2e.py  test_ai_main.py  test_ai_ticket_chat_e2e.py  test_ai_ticket_e2e.py  test_main_application.py
tests/integration/: test_ai_integration.py  test_ai_service_integration.py  test_ai_ticket_integration.py  test_client_integration.py
(+5 files in other folders)
