[project]
name = "ta-assignment"
version = "0.1.0"
description = "Template repository for a mail client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai-api",
    "openai-impl",
    "tickets-api",
    "tickets-client-impl",
    "ai-ticket-adapter",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "gtask-client-impl @ git+https://github.com/gsiri-code/oss-taapp.git@feat/aligning-ticket-api#subdirectory=src/gtask_client_impl",
    "task-client-api @ git+https://github.com/gsiri-code/oss-taapp.git@feat/aligning-ticket-api#subdirectory=src/task_client_api",
    "task-client-service @ git+https://github.com/gsiri-code/oss-taapp.git@feat/aligning-ticket-api#subdirectory=src/task_client_service",
    "trello-client-impl @ git+https://github.com/austinhuang0131/oss-fall2025.git@hw3#subdirectory=src/trello_client_impl",
    "trello-ticket-impl @ git+https://github.com/austinhuang0131/oss-fall2025.git@hw3#subdirectory=src/trello_ticket_impl",
]

[project.optional-dependencies]
dev = [
    "google-api-python-client-stubs>=1.30.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "mypy>=1.17.0",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
    "types-requests>=2.32.4.20250611",
]

[tool.uv.workspace]
members = [
  "src/mail_client_api",
  "src/gmail_client_impl",
  "src/mail_client_service",
  "src/mail_client_adapter",
  "src/mail_client_service_client",
  "src/ai_api",
  "src/openai_impl",
  "src/ai_service",
  "src/ai_adapter",
  "src/ai_service_client",
  "src/tickets_api",
  "src/tickets_client_impl",
  "src/ai_ticket_service",
  "src/ai_ticket_service_client",
  "src/ai_ticket_adapter",
]

[tool.ruff]
line-length = 130 # high for top level due to tests
target-version = "py311"
extend-exclude = [
  "src/ai_ticket_service_client",
  "src/ai_ticket_service_client/**",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", # `incorrect-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `incorrect-blank-line-before-class`.
  "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.
  "S101", # Use of `assert` detected --> Asserts are good in our opinion. Tests use asserts profusely.
]
# Test files are allowed to be less strict for pragmatic testing practices:
# TRY300 (no else in try), BLE001 (catch Exception), ANN401 (Any type), SLF001 (private access),
# E501 (line too long), S105/S106 (hardcoded passwords in tests), ARG001/ARG002/ARG005 (unused args for fixtures),
# INP001 (implicit namespace package), PLC0415 (import outside top-level), D103 (missing docstring),
# I001 (import order), PLR2004 (magic values in comparisons)
per-file-ignores = { "**/test_*.py" = ["TRY300", "BLE001", "ANN401", "SLF001", "E501", "S105", "ARG001", "ARG002", "S106", "INP001", "PLC0415", "D103", "I001", "ARG005", "PLR2004"] }

[tool.mypy]
strict = true
explicit_package_bases = true # Required for src layout
mypy_path = [
    "src/mail_client_api/src",
    "src/gmail_client_impl/src",
    "src/mail_client_service/src",
    "src/mail_client_adapter/src",
    "src/mail_client_service_client",
    "src/ai_api/src",
    "src/openai_impl/src",
    "src/ai_service/src",
    "src/ai_adapter/src",
    "src/ai_service_client",
    "src/tickets_api/src",
    "src/tickets_client_impl/src",
    "src/ai_ticket_service/src",
    "src/ai_ticket_service_client",
    "src/ai_ticket_adapter/src",
]
ignore_missing_imports = false
warn_unused_ignores = false

# Allow untyped imports for specific modules
[[tool.mypy.overrides]]
module = [
    "google.*",
    "googleapiclient.*",
    "gmail_client_impl.*",
    "mail_client_api.*",
    "ai_api.*",
    "openai_impl.*",
    "ai_adapter.*",
    "ai_service_client.*",
    "tickets_api.*",
    "tickets_client_impl.*",
    "gtask_client_impl.*",
    "prometheus_fastapi_instrumentator.*",
    "trello_client_impl.*",
    "trello_ticket_impl.*",
    "requests",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    ".", 
    "src",
    "src/ai_ticket_service_client"
]
testpaths = [
    "src/ai_service/tests",
    "src/ai_adapter/tests",
    "src/ai_api/tests",
    "src/openai_impl/tests",
    "src/ai_ticket_service/tests",
    "src/ai_ticket_adapter/tests",
    "tests/integration",
    "tests/e2e",
]
addopts = ["--cov", "--cov-report=term-missing", "--import-mode=importlib"]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (medium speed, real dependencies)",
    "e2e: marks tests as end-to-end tests (slow, full system)",
    "circleci: marks tests that can run in CI/CD environments without local credentials",
    "local_credentials: marks tests that require local credentials.json or token.json files",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",                
    "*/__main__.py",            
    "src/mail_client_service_client/*", # Auto-generated OpenAPI client, tested indirectly
    "src/ai_service_client/*",
    "src/ai_ticket_service_client/*",
    "src/tickets_client_impl/*",
    "src/tickets_api/*",
    "src/openai_impl/*",
    "src/mail_client_api/*",
    "src/mail_client_adapter/*",
    "src/mail_client_service/*",
    "src/gmail_client_impl/*",
]


[tool.coverage.report]
fail_under = 85 # Justification: A high threshold ensures most code is tested.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "openapi-python-client>=0.26.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
mail_client_api = { workspace = true }
gmail_client_impl = { workspace = true }
mail_client_service = { workspace = true }
mail_client_adapter = { workspace = true }
mail_client_service_client = { workspace = true }
ai_api = { workspace = true }
openai_impl = { workspace = true }
ai_service = { workspace = true }
ai_adapter = { workspace = true }
ai_service_client = { workspace = true }
tickets_api = { workspace = true }
tickets_client_impl = { workspace = true }
gtask-client-impl = { git = "https://github.com/gsiri-code/oss-taapp.git", branch = "feat/aligning-ticket-api", subdirectory = "src/gtask_client_impl" }
task-client-api = { git = "https://github.com/gsiri-code/oss-taapp.git", branch = "feat/aligning-ticket-api", subdirectory = "src/task_client_api" }
ai_ticket_service = { workspace = true }
ai_ticket_service_client = { workspace = true }
ai_ticket_adapter = { workspace = true }
trello-client-impl = { git = "https://github.com/austinhuang0131/oss-fall2025.git", branch = "hw3", subdirectory = "src/trello_client_impl" }
trello-ticket-impl = { git = "https://github.com/austinhuang0131/oss-fall2025.git", branch = "hw3", subdirectory = "src/trello_ticket_impl" }
