[project]
name = "ai-service"
version = "0.1.0"
description = "FastAPI service exposing the AI interface"
requires-python = ">=3.11"
dependencies = [
    "ai-api",
    "openai-impl",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
