[project]
name = "mail-client-service"
version = "0.1.0"
description = "FastAPI service wrapper for mail client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "mail-client-api",
    "gmail-client-impl",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "httpx>=0.25.0",
]

[tool.uv.sources]
mail-client-api = { workspace = true }
gmail-client-impl = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []
