[project]
name = "openai-client-impl"
version = "0.1.0"
description = "OpenAI implementation of the AI client API with OAuth 2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai-client-api",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

[tool.uv.sources]
ai-client-api = { workspace = true }
