[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-impl"
version = "0.1.0"
description = "Concrete Slack implementation for HW2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["slack_impl*"]

[tool.setuptools.package-data]
slack_impl = ["py.typed"]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
namespace_packages = false
explicit_package_bases = false
