[project]
name = "tickets-api"
version = "0.1.0"
description = "Abstract interface definitions for ticketing systems, providing a uniform contract for ticket backend implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
