[project]
name = "tickets-client-impl"
version = "0.1.0"
description = "Tickets API implementation using Google Tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gtask-client-impl",
    "tickets-api",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests", "src"]
addopts = ["--cov", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", ]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tickets_client_impl"]

[tool.hatch.build.targets.wheel.force-include]
"src/tickets_client_impl/py.typed" = "tickets_client_impl/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []
